add: add new section on page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="header">
+        <div class="header_nav"></div>
+        <div class="banner_wrapper">
+          <div class="header_social"></div>
+          <div class="header_banner"></div>
+        </div>
+      </div>
+      <div class="slider_wrapper">
+        <div class="slider_description">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio
+          facilis enim debitis eaque voluptate assumenda aperiam, aliquam esse
+          ad eveniet itaque at suscipit soluta tempore corporis eum repellendus
+          velit iusto.
+        </div>
+        <div class="slider">Slider</div>
+      </div>
+
+      <div class="video_wrapper">
+        <div class="video"></div>
+        <div class="video_description">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda
+          obcaecati perspiciatis aspernatur, voluptas soluta eligendi, fugiat ut
+          quae animi et odio voluptatem eum veniam, ad consequatur enim minima
+          iste officiis?
+        </div>
+        <div class="form_submit">
+          <input type="text" />
+          <input type="text" />
+          <button>SUBMIT</button>
+        </div>
+      </div>
+
+      <div class="price_wrapper">
+          <div class="price_card"></div>
+          <div class="price_card"></div>
+          <div class="price_card"></div>
+      </div>
+    </div>
+  </body>
 </html>
