refactor: upgraid  styles in header and banner section

--- a/index.html
+++ b/index.html
@@ -11,32 +11,36 @@
 
 <body>
   <div class="container">
-    <div class="header">
-      <div class="navigation">
-        <ul class="navigation_menu">
-          <li class="navigation_menu--links-logo">IC "Repair Design Project"</li>
-          <li class="navigation_menu--links">HOME</li>
-          <li class="navigation_menu--links">PROJECTS</li>
-          <li class="navigation_menu--links">MEASUREMENT</li>
-          <li class="navigation_menu--links">TEAM</li>
-          <li class="navigation_menu--links">REVIEWS</li>
-          <li class="navigation_menu--links">CONTACTS</li>
-          <li class="navigation_menu--links-telefon">+7 (928) 768-32-39</li>
-        </ul>
-        <button class="button">Request a call</button>
-      </div>
-      <div class="banner_wrapper">
-        <div class="header_social">INSTAGRAM</div>
-        <div class="header_banner">
-          <h1 class="main_heding">Turnkey Repair in the
-            city of Rostov-on-Don</h1>
-          <p class="main_description">Get ready-made turnkey repairs on time
-            with work time saving up to 45 days and 20% from
-            cost of materials due to the organization of work</p>
-          <button class="cta">CALCULATE THE COST</button><button class="cta2">SUBMIT YOUR APPLICATION</button>
+    <header class="header">
+
+      <div class="header_social">INSTAGRAM</div>
+
+      <div class="header_wrapper">
+        <div class="navigation">
+          <ul class="navigation_menu">
+            <li class="navigation_menu--logo"><a href="#">IC "Repair Design Project"</a></li>
+            <li class="navigation_menu--links"><a href="#">HOME</a></li>
+            <li class="navigation_menu--links"><a href="#">PROJECTS</a></li>
+            <li class="navigation_menu--links"><a href="#">MEASUREMENT</a></li>
+            <li class="navigation_menu--links"><a href="#">TEAM</a></li>
+            <li class="navigation_menu--links"><a href="#">REVIEWS</a></li>
+            <li class="navigation_menu--links"><a href="#">CONTACTS</a></li>
+            <li class="navigation_menu--telefon">
+              <a href="tel:+79287683239">+7 (928) 768-32-39</a></li>
+              <li class="navigation_menu--button_header">
+          <button class="navigation_menu--button">Request a call</button></li>
+          </ul>
+        </div>
+        <div class="header_banner"><div class="banner_text">
+          <h1 class="header_banner--main_heding">Turnkey Repair in the of city <span
+              class="header_banner--main_heding-orange">Rostov-on-Don</span></h1>
+          <p class="header_banner--main_description">Get ready-made turnkey repairs on time<br>
+            with work time saving up to 45 days and 20% from of cost materials due to the organization of work</p>
+          <button class="header_banner--cta">CALCULATE THE COST</button><button class="header_banner--cta2">SUBMIT YOUR APPLICATION</button>
+        </div>
         </div>
       </div>
-    </div>
+    </header>
     <div class="slider_wrapper">
       <div class="slider_description">
         <h2 class="slider_description--heading">Completed projects</h2>
