refactor: upgraid styles in slider section

--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
   <div class="container">
     <header class="header">
 
-      <div class="header_social">INSTAGRAM</div>
+      <div class="header_social">
+        <p class="header_social--text"><a class="header_social--text-link" href="#">INSTAGRAM</a></p>
+      </div>
 
       <div class="header_wrapper">
         <div class="navigation">
           <ul class="navigation_menu">
-            <li class="navigation_menu--logo"><a href="#">IC "Repair Design Project"</a></li>
+            <li class="navigation_menu--logo">
+              <h1><a href="#">IC "Repair Design Project"</a></h1>
+            </li>
             <li class="navigation_menu--links"><a href="#">HOME</a></li>
             <li class="navigation_menu--links"><a href="#">PROJECTS</a></li>
             <li class="navigation_menu--links"><a href="#">MEASUREMENT</a></li>
@@ -27,62 +31,86 @@
             <li class="navigation_menu--links"><a href="#">CONTACTS</a></li>
             <li class="navigation_menu--telefon">
               <a href="tel:+79287683239">+7 (928) 768-32-39</a></li>
-              <li class="navigation_menu--button_header">
-          <button class="navigation_menu--button">Request a call</button></li>
+            <li class="navigation_menu--button_header">
+              <button class="navigation_menu--button">Request a call</button></li>
           </ul>
         </div>
-        <div class="header_banner"><div class="banner_text">
-          <h1 class="header_banner--main_heding">Turnkey Repair in the of city <span
-              class="header_banner--main_heding-orange">Rostov-on-Don</span></h1>
-          <p class="header_banner--main_description">Get ready-made turnkey repairs on time<br>
-            with work time saving up to 45 days and 20% from of cost materials due to the organization of work</p>
-          <button class="header_banner--cta">CALCULATE THE COST</button><button class="header_banner--cta2">SUBMIT YOUR APPLICATION</button>
-        </div>
+        <div class="header_banner">
+          <div class="banner_text">
+            <h2 class="header_banner--main_heding">Turnkey Repair in the city of <span
+                class="header_banner--main_heding-orange">Rostov-on-Don</span></h2>
+            <p class="header_banner--main_description">Get ready-made turnkey repairs on time<br>
+              with work time saving up to 45 days and 20% from cost of materials due to the organization of work</p>
+            <button class="header_banner--cta">CALCULATE THE COST</button><button class="header_banner--cta2">SUBMIT
+              YOUR APPLICATION</button>
+          </div>
         </div>
       </div>
+      <a class="scroll_down" href="#">
+        <p>Scroll down</p> <svg width="29" height="29" viewBox="0 0 29 29" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <circle cx="14.4999" cy="14.5" r="13.75" stroke="#E3B873" stroke-width="1.5" />
+          <path d="M18.7213 13.1271L14.4081 17.4092L10.0949 13.1271" stroke="#E3B873" stroke-width="1.5" />
+        </svg>
+      </a>
     </header>
-    <div class="slider_wrapper">
-      <div class="slider_description">
-        <h2 class="slider_description--heading">Completed projects</h2>
-        <p class="slider_description--text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio
-          facilis enim debitis eaque voluptate assumenda aperiam, aliquam esse
-          ad eveniet itaque at suscipit soluta tempore corporis eum repellendus
-          velit iusto.</p>
-        <ul class="slider_subcaption">
-          <li>
-            <p class="slider_subcaption--caption-header">City:</p><span
-              class="slider_subcaption--s_subcaption-s_captiontext">Rostov-on-Don
-              LCD admiral</span>
-          </li>
-          <li>
-            <p class="slider_subcaption--caption-header">apartment area:</p><span
-              class="slider_subcaption--s_subcaption-s_captiontext">81 m2</span>
-          </li>
-          <li>
-            <p class="slider_subcaption--caption-header">Repair time:</p><span
-              class="slider_subcaption--s_subcaption-s_captiontext">3.5 months</span>
-          </li>
-          <li>
-            <p class="slider_subcaption--caption-header">Repair Cost:</p><span
-              class="slider_subcaption--s_subcaption-s_captiontext">Upon request</span>
-          </li>
-        </ul>
-        <div class="slider_description--s_description_navigation">Навигация</div>
-      </div>
-      <div class="slider">
 
+    <section class="slider_wrapper">
+      <div class="slider_description_wrapper">
+        <div class="slider_description">
+          <h2 class="slider_description--heading">Completed projects</h2>
+          <p class="slider_description--text">Only a small part of the work performed by our company is presented on the
+            site. For 14 years on in the construction market we have made happy more than 1000 families</p>
+          <ul class="slider_description--subcaption">
+            <li>
+              <p class="slider_description--subcaption-header">City:</p><span
+                class="slider_description--subcaption-text">Rostov-on-Don
+                LCD admiral</span>
+            </li>
+            <li>
+              <p class="slider_description--subcaption-header">apartment area:</p><span
+                class="slider_description--subcaption-text">81 m2</span>
+            </li>
+            <li>
+              <p class="slider_description--subcaption-header">Repair time:</p><span
+                class="slider_description--subcaption-text">3.5 months</span>
+            </li>
+            <li>
+              <p class="slider_description--subcaption-header">Repair Cost:</p><span
+                class="slider_description--subcaption-text">Upon request</span>
+            </li>
+          </ul>
+          <div class="slider_description--navigation"><a href="#"><svg class="slider_description--navigation-arrow_left" viewBox="0 0 42 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M6.63807 13.2761L2.29917e-05 6.63808L6.63807 3.80641e-05L7.58563 0.947606L1.89516 6.63808L7.58563 12.3286L6.63807 13.2761Z" fill="white"/>
+<path fill-rule="evenodd" clip-rule="evenodd" d="M0.947579 5.96828L41.4556 5.96829L41.4556 7.30835L0.947578 7.30834L0.947579 5.96828Z" fill="white"/>
+</svg></a>
+<a class="slider_description--navigation-activ_point" href=""></a>
+<a class="slider_description--navigation-point" href=""></a>
+<a class="slider_description--navigation-point" href=""></a>
+<a href="#"><svg class="slider_description--navigation-arrow_right" viewBox="0 0 42 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M6.63807 13.2761L2.29917e-05 6.63808L6.63807 3.80641e-05L7.58563 0.947606L1.89516 6.63808L7.58563 12.3286L6.63807 13.2761Z" fill="white"/>
+<path fill-rule="evenodd" clip-rule="evenodd" d="M0.947579 5.96828L41.4556 5.96829L41.4556 7.30835L0.947578 7.30834L0.947579 5.96828Z" fill="white"/>
+</svg></a>
+</div>
+        </div>
+      </div>
+
+      <aside class="slider">
         <ul class="slider_navigation">
-          <li class="slider_navigation--links-active">Rostov-on-Don, Admiral</li>
-          <li class="slider_navigation--links">Sochi Thieves</li>
-          <li class="slider_navigation--links">Rostov-on-Don Patriotic</li>
+          <li class="slider_navigation--links-active"><a href="">Rostov-on-Don, Admiral</a></li>
+          <li class="slider_navigation--links"><a href="">Sochi Thieves</a></li>
+          <li class="slider_navigation--links"><a href="">Rostov-on-Don Patriotic</a></li>
         </ul>
         <div class="slider_container">
           <div class="slider_container--item"></div>
           <div class="slider_container--item-hide"></div>
         </div>
+          <a class="slider--next" href="#"><svg  class="slider--next-arrow" viewBox="0 0 11 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M1.97923 1.03418L10.3066 9.3607L1.97923 17.6872L0.790527 16.4986L7.92914 9.3607L0.790527 2.22277L1.97923 1.03418Z" fill="white" stroke="white" stroke-width="0.75"/>
+</svg></a>
+      </aside>
 
-      </div>
-    </div>
+    </section>
 
     <section class="video_wrapper">
       <h2 class="heading_video">online control</h2>
