refactor: upgraid styles in design project section

--- a/index.html
+++ b/index.html
@@ -311,8 +311,7 @@
     <section class="design_project">
       <h2 class="subtitle_black">design project</h2>
       <div class="subtitle_icon design_icon"></div>
-      <p class="design_project--description">Design project not only helps to make the repair of your apartment more
-        modern,
+      <p class="design_project--description">Design project not only helps to make the repair of your apartment more modern,<br>
         but also significantly reduces the cost of materials and reduces the time of repair work.</p>
       <div class="price_wrapper">
         <div class="price_card">
