refactor: add style in  header layot for  mobile screeen

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Document</title>
+  <title>repair-design-project</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -39,10 +39,9 @@
           <div class="banner_text">
             <h2 class="header_banner--main_heding">Turnkey Repair in the city of <span
                 class="header_banner--main_heding-orange">Rostov-on-Don</span></h2>
-            <p class="header_banner--main_description">Get ready-made turnkey repairs on time<br>
-              with work time saving up to 45 days and 20% from cost of materials due to the organization of work</p>
-            <button class="header_banner--cta">CALCULATE THE COST</button><button class="header_banner--cta2">SUBMIT
-              YOUR APPLICATION</button>
+            <p class="header_banner--main_description">Get ready-made turnkey repairs on time with work time saving up to 45 days and 20% from cost of materials due to the organization of work</p>
+            <div class="header_banner--buttons"><button class="header_banner--buttons-cta">CALCULATE THE COST</button><button class="header_banner--buttons-cta2"><span class="decstop">SUBMIT
+              YOUR </span>APPLICATION</button></div>
           </div>
         </div>
       </div>
